--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,14 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="sign_in">Sign in</string>
     <string name="no_account">No account? Sign up</string>
+    <string name="auth_failed">Authentication failed</string>
 
     <string name="username">Username</string>
     <string name="confirm_password">Confirm password</string>
     <string name="sign_up">Sign up</string>
+    <string name="account_created">Account created</string>
+    <string name="invalid_username">Required</string>
+    <string name="invalid_email">Invalid email</string>
+    <string name="invalid_password">Min password length:</string>
+    <string name="invalid_confirm">Password fields must match</string>
 </resources>
