--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="password">Password</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="sign_in">Sign in</string>
-    <string name="no_account">No account? Sign up</string>
+    <string name="no_account">No account?</string>
     <string name="auth_failed">Authentication failed</string>
 
     <string name="username">Username</string>
