Add Profile Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,10 @@
     <string name="no_stay">No stay planned</string>
     <string name="plan">Start planning!</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Profile Fragment -->
+    <string name="settings">Settings</string>
+    <string name="history">History</string>
+    <string name="friends">Friends</string>
+    <string name="no_plan">Nothing planned yet</string>
+
 </resources>
