--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,17 @@
     <string name="new_container">New container</string>
     <string name="new_item">New item</string>
 
+    <!-- Alerts Fragment -->
+    <string name="no_alerts">No alerts yet</string>
+    <string name="created">created</string>
+    <string name="joined">joined</string>
+    <string name="quit">quit</string>
+    <string name="added">added</string>
+    <string name="deleted">deleted</string>
+    <string name="renamed">renamed</string>
+    <string name="checked">checked</string>
+    <string name="unchecked">unchecked</string>
+    <string name="to">to</string>
+    <string name="in">in</string>
+
 </resources>
