--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="alerts">Alerts</string>
     <string name="profile">Profile</string>
 
+    <!-- Stay Activity -->
+    <string name="spot">Camp site</string>
+
     <!-- No Stay Activity -->
     <string name="no_stay">No stay planned</string>
     <string name="plan">Start planning!</string>
@@ -32,7 +35,6 @@
     <string name="settings">Settings</string>
     <string name="history">History</string>
     <string name="friends">Friends</string>
-    <string name="no_plan">Nothing planned yet</string>
 
     <!-- Stay Edit Activity -->
     <string name="stay_creation">Stay creation</string>
@@ -42,7 +44,7 @@
     <string name="arrival_date">Arrival date</string>
     <string name="departure_time">Departure time</string>
     <string name="arrival_time">Arrival time</string>
-    <string name="spot">Camping spot (Optional)</string>
+    <string name="spot_input">Camp site (Optional)</string>
     <string name="confirm">Confirm</string>
     <string name="invalid_location">Required</string>
     <string name="invalid_date">Invalid date</string>
@@ -66,6 +68,8 @@
     <string name="confirm_load">This will replace all current items. Are you sure?</string>
     <string name="confirm_check">Are you sure?</string>
     <string name="his_preset">his preset</string>
+    <string name="submit">Submit</string>
+    <string name="add">Add</string>
 
     <!-- Alerts Fragment -->
     <string name="no_alerts">No alerts yet</string>
